--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -28,18 +28,17 @@
       z-index: 100;
       width: inherit;
       max-width: inherit;
-
-      & #right-menu {
-        float: right;
-        padding: 0px 15px;
-      }
     }
 
     & .ant-layout-content {
       padding: 24px;
       background: #fff;
-      min-height: 360px;
+      min-height: 100%;
       margin-top: 20px;
     }
   }
+}
+
+.global-notifications .ant-popover-inner-content {
+  padding: 0px;
 }
